fixed spacing dreams, nightmare and profile

--- a/style.css
+++ b/style.css
@@ -486,7 +486,6 @@ opacity:0.8;
 	float:left;
 	display:block;
 	position: relative;
-	margin-left:10px;
 	margin-top:5px;
 }
 
